--- a/Werminal/Shell.xaml
+++ b/Werminal/Shell.xaml
@@ -5,8 +5,6 @@
         xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock" 
         Title="Werminal" Height="350" Width="525">
     <ad:DockingManager>
-        <ad:DocumentPane cal:RegionManager.RegionName="MainRegion">
-            <ad:DocumentContent />
-        </ad:DocumentPane> 
+        <ad:DocumentPane cal:RegionManager.RegionName="MainRegion"/>
     </ad:DockingManager>
 </Window>
