--- a/Wish/Shell.xaml
+++ b/Wish/Shell.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
         xmlns:cal="clr-namespace:Microsoft.Practices.Prism.Regions;assembly=Microsoft.Practices.Prism" 
         xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock" 
-        Title="Werminal" Height="350" Width="525">
+        Title="Wish" Height="450" Width="725">
     <ad:DockingManager>
         <ad:DocumentPane cal:RegionManager.RegionName="MainRegion"/>
     </ad:DockingManager>
