--- a/WishModule/Views/WishView.xaml
+++ b/WishModule/Views/WishView.xaml
@@ -1,12 +1,14 @@
-﻿<UserControl x:Class="WishModule.Views.WerminalView"
+﻿<UserControl x:Class="WishModule.Views.WishView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:Terminal="clr-namespace:Terminal;assembly=Terminal"
-             mc:Ignorable="d" 
+             xmlns:Terminal="clr-namespace:Terminal;assembly=Terminal" xmlns:Views="clr-namespace:WishModule.Views" mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-        <Terminal:Terminal 
+    <UserControl.CommandBindings>
+        <CommandBinding Command="{x:Static Views:WishView.TabNew}" Executed="NewTabRequest"/>
+    </UserControl.CommandBindings>
+    <Terminal:Terminal 
 			x:Name="Output"
             FontFamily="Consolas"
 			Grid.Row="3"
