--- a/WishModule/Views/WishView.xaml
+++ b/WishModule/Views/WishView.xaml
@@ -2,17 +2,21 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:ViewModels="clr-namespace:Wish.ViewModels" mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              Loaded="OnUserControlLoaded">
-    <TextBox Text="{Binding Path=Text, Mode=OneWay}"
-             x:Name="textBox"
-             FontFamily="{Binding Path=FontFamily, Mode=OneWay}"
+    <UserControl.DataContext>
+        <ViewModels:TerminalViewModel/>
+    </UserControl.DataContext>
+    <TextBox x:Name="textBox"
+             FontFamily="{Binding Terminal.FontFamily, Mode=OneWay}"
              VerticalScrollBarVisibility="Auto"
              AcceptsReturn="True"
              TextChanged="ScrollToEnd"
              Focusable="True">
+        <TextBox.Text>
+            <Binding Path="Terminal.Text" UpdateSourceTrigger="PropertyChanged"/>
+        </TextBox.Text>
         <TextBox.InputBindings>
             <KeyBinding Command="{Binding Path=CommandEntered}" Key="Enter" />
          </TextBox.InputBindings>
