--- a/WishModule/Views/WishView.xaml
+++ b/WishModule/Views/WishView.xaml
@@ -2,9 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:ViewModels="clr-namespace:Wish.ViewModels" mc:Ignorable="d" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:ViewModels="clr-namespace:Wish.ViewModels" xmlns:Views="clr-namespace:Wish.Views" mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              Loaded="OnUserControlLoaded">
+    <UserControl.CommandBindings>
+        <CommandBinding Command="{x:Static Views:WishView.TabNew}" Executed="NewTabRequest"/>
+    </UserControl.CommandBindings>
+
     <TextBox x:Name="textBox"
              FontFamily="{Binding Terminal.FontFamily, Mode=OneWay}"
              VerticalScrollBarVisibility="Auto"
@@ -15,6 +19,7 @@
             <Binding Path="Terminal.Text" UpdateSourceTrigger="PropertyChanged"/>
         </TextBox.Text>
         <TextBox.InputBindings>
+            <KeyBinding Command="{Binding Path=NewTabRequested}" Gesture="CTRL+SHIFT+T" />
             <KeyBinding Command="{Binding Path=CommandEntered}" Key="Enter" />
          </TextBox.InputBindings>
     </TextBox>
