--- a/WishModule/Views/SearchBox.xaml
+++ b/WishModule/Views/SearchBox.xaml
@@ -5,14 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:Wish="clr-namespace:Wish" xmlns:Controls="clr-namespace:Aviad.WPF.Controls;assembly=Aviad.WPF.Controls" mc:Ignorable="d" 
              d:DesignHeight="50" d:DesignWidth="275">
     <UserControl.Resources>
-        <Wish:ActbViewModel x:Key="vm"/>
+        <Wish:ActbViewModel x:Key="ViewModel"/>
         <CollectionViewSource x:Key="xml">
             <CollectionViewSource.Source>
                 <PriorityBinding>
-                    <Binding Source="{StaticResource vm}"
+                    <Binding Source="{StaticResource ViewModel}"
                              Path="QueryCollection"
                              IsAsync="True"/>
-                    <Binding Source="{StaticResource vm}" Path="WaitMessage"/>
+                    <Binding Source="{StaticResource ViewModel}" Path="WaitMessage"/>
                 </PriorityBinding>
             </CollectionViewSource.Source>
         </CollectionViewSource>
@@ -50,7 +50,7 @@
                                           Grid.Column="1" 
                                           HorizontalAlignment="Stretch"
                                           Margin="3"
-                                          Text="{Binding Source={StaticResource vm}, Path=QueryText, UpdateSourceTrigger=PropertyChanged}"
+                                          Text="{Binding Source={StaticResource ViewModel}, Path=QueryText, UpdateSourceTrigger=PropertyChanged}"
                                           Width="250"
                                           Height="25"
                                           VerticalAlignment="Top" 
