--- a/Wish.SearchBox/Views/SearchBox.xaml
+++ b/Wish.SearchBox/Views/SearchBox.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:Controls="clr-namespace:Aviad.WPF.Controls;assembly=Aviad.WPF.Controls"
-             xmlns:ViewModels="clr-namespace:Wish.SearchBox.ViewModels" mc:Ignorable="d" 
+             xmlns:ViewModels="clr-namespace:Wish.SearchBox.ViewModels"
+             xmlns:Controls="clr-namespace:Aviad.WPF.Controls;assembly=Aviad.WPF.Controls" mc:Ignorable="d" 
              d:DesignHeight="50" d:DesignWidth="275">
     <UserControl.Resources>
         <ViewModels:TabCompletionViewModel x:Key="ViewModel"/>
