--- a/WishModule/Views/WishView.xaml
+++ b/WishModule/Views/WishView.xaml
@@ -14,6 +14,7 @@
         <CommandBinding Command="{x:Static Views:WishView.ControlR}" Executed="ExecuteControlR"/>
         <CommandBinding Command="{x:Static Views:WishView.ControlP}" Executed="ExecuteControlP"/>
         <CommandBinding Command="{x:Static Views:WishView.ControlN}" Executed="ExecuteControlN"/>
+        <CommandBinding Command="{x:Static Views:WishView.ControlD}" Executed="ExecuteControlD"/>
     </UserControl.CommandBindings>
         <avalonEdit:TextEditor x:Name="textEditor"
              FontFamily="Consolas"
