--- a/style.css
+++ b/style.css
@@ -3,18 +3,22 @@ body {
 }
 
 h1 {
-	font-size: 250%;
+	font-size: 300%;
+	font-weight: bold;
+}
+
+h2 {
+	font-size: 175%;
 }
 
 #wrapper {
 	width: 925px;
-	margin: 0 auto;
+	margin: 30px auto 0 auto;
 }
 
 #main {
 	float: left;
 	clear: both;
-	border-top: double 4px #DBD9D4;
 	width: 100%;
 }
 
